adding updated package

--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/angular-basics-101",
+            "outputPath": "blue",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
