--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -42,6 +44,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.0.0-alpha.6",
-    "typescript": "~5.4.2"
+    "tslint": "^6.1.3",
+    "typescript": "~5.4.2",
+    "typescript-tslint-plugin": "^1.0.2"
   }
 }
